using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Tags
{
    public const string enemy = "Enemy";
    public const string player = "Player";
    public const string gameManager = "Game Manager";
    public const string boss = "Boss";
}
public class Anim
{
    public const string attack = "Attack";
    public const string run = "Run";
    public const string walk = "Walk";
    public const string death = "Death";
    public const string hit = "Hit";
    public const string scream = "Scream";
}
